correction on pom

--- a/hefesto-spring-api/pom.xml
+++ b/hefesto-spring-api/pom.xml
@@ -1,5 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -13,7 +13,7 @@
 	<version>0.0.1</version>
 	<name>hefesto-spring-api</name>
 	<description>hefesto-spring-api (REST E JWT)</description>
-		
+
 	<properties>
 		<java.version>13</java.version>
 	</properties>
@@ -46,7 +46,7 @@
 		</dependency>
 		<dependency>
 		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-swagger2</artifactId>s
+		    <artifactId>springfox-swagger2</artifactId>
 		    <version>2.9.2</version>
 		</dependency>
 		<dependency>
@@ -54,7 +54,6 @@
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <version>2.9.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -66,7 +65,6 @@
 		    <artifactId>jjwt</artifactId>
 		    <version>0.9.1</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -108,5 +106,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 </project>
