--- a/hefesto-j2ee8-api/pom.xml
+++ b/hefesto-j2ee8-api/pom.xml
@@ -11,16 +11,18 @@
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
-        <jakartaee>8.0.1</jakartaee>
-        <junit>5.7.0-M1</junit>
-        <log4j-core>2.13.3</log4j-core>
-        <slf4j>2.0.0-alpha1</slf4j>
+        
+        <jakartaee.version>8.0.1</jakartaee.version>
+        <junit.version>5.7.0-M1</junit.version>
+        <log4j-core.version>2.13.3</log4j-core.version>
+        <slf4j.version>2.0.0-alpha1</slf4j.version>
+        <jackson.version>2.11.1</jackson.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
-            <version>${jakartaee}</version>
+            <version>${jakartaee.version}</version>
             <scope>provided</scope>
         </dependency>        
 
@@ -32,27 +34,45 @@
 
 		
 		<dependency>
-			<groupId>org.hibernate</groupId>
+			<groupId>org.hibernate.validator</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>7.0.0.Alpha4</version>
 		</dependency>		
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator-annotation-processor</artifactId>
+		    <version>7.0.0.Alpha4</version>
+		</dependency>
 
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
 		    <version>3.10</version>
-		</dependency>		        
-
+		</dependency>
+		
 		<dependency>
-		    <groupId>org.junit.vintage</groupId>
-		    <artifactId>junit-vintage-engine</artifactId>
-		    <version>${junit}</version>
-		    <scope>test</scope>
-		</dependency>        
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>${jackson.version}</version>
+		</dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>		
+      
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>${log4j-core}</version>
+            <version>${log4j-core.version}</version>
         </dependency>      
+		
+		<dependency>
+		    <groupId>org.junit.jupiter</groupId>
+		    <artifactId>junit-jupiter-api</artifactId>
+		    <version>${junit.version}</version>
+		    <scope>test</scope>
+		</dependency>
+
     </dependencies>
 </project>
