--- a/hefesto-j2ee8-api/pom.xml
+++ b/hefesto-j2ee8-api/pom.xml
@@ -14,6 +14,7 @@
         
         <jakartaee.version>8.0.1</jakartaee.version>
         <junit.version>5.7.0-M1</junit.version>
+        <junit.platform.version>1.7.0-M1</junit.platform.version>
         <log4j-core.version>2.13.3</log4j-core.version>
         <slf4j.version>2.0.0-alpha1</slf4j.version>
         <jackson.version>2.11.1</jackson.version>
@@ -69,10 +70,16 @@
 		
 		<dependency>
 		    <groupId>org.junit.jupiter</groupId>
-		    <artifactId>junit-jupiter-api</artifactId>
+		    <artifactId>junit-jupiter-engine</artifactId>
 		    <version>${junit.version}</version>
 		    <scope>test</scope>
 		</dependency>
+	    <dependency>
+	        <groupId>org.junit.platform</groupId>
+	        <artifactId>junit-platform-runner</artifactId>
+	        <version>${junit.platform.version}</version>
+	        <scope>test</scope>
+	    </dependency>
 		<dependency>
 		    <groupId>org.hamcrest</groupId>
 		    <artifactId>hamcrest-all</artifactId>
