--- a/hefesto-spring-api/pom.xml
+++ b/hefesto-spring-api/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>14</java.version>
+		<springfox-swagger2.version>2.9.2</springfox-swagger2.version>
 	</properties>
 
 	<dependencies>
@@ -54,7 +55,10 @@
 		    <artifactId>hibernate-validator-annotation-processor</artifactId>
 		</dependency>
 		
-		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		</dependency>		
 		
 		<dependency>
 		    <groupId>de.codecentric</groupId>
@@ -64,12 +68,12 @@
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
-		    <version>2.9.2</version>
+		    <version>${springfox-swagger2.version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger-ui</artifactId>
-		    <version>2.9.2</version>
+		    <version>${springfox-swagger2.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
