--- a/hefesto-spring-api/src/main/resources/application.properties
+++ b/hefesto-spring-api/src/main/resources/application.properties
@@ -35,13 +35,13 @@ hefesto.jwt.secret=rm'!@N=Ke!~p8VTA2ZRK~nMDQX5Uvm!m'D&]{@Vr?G;2?XhbC:Qa#9#eMLN\\
 hefesto.jwt.expiration=86400000
 
 # actuator
-management.endpoint.health.show-details=always
-management.endpoints.web.exposure.include=*
-info.app.name=@project.name@
-info.app.description=@project.description@
-info.app.version=@project.version@
-info.app.encoding=@project.build.sourceEncoding@
-info.app.java.version=@java.version@
+#management.endpoint.health.show-details=always
+#management.endpoints.web.exposure.include=*
+#info.app.name=@project.name@
+#info.app.description=@project.description@
+#info.app.version=@project.version@
+#info.app.encoding=@project.build.sourceEncoding@
+#info.app.java.version=@java.version@
 
 # spring boot admin
-spring.boot.admin.client.url=http://localhost:8081
+#spring.boot.admin.client.url=http://localhost:8081
