--- a/hefesto-spring-base/pom.xml
+++ b/hefesto-spring-base/pom.xml
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -9,15 +9,16 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.hfs</groupId>
-	<artifactId>hefesto-spring-api</artifactId>
+	<artifactId>hefesto-spring-base</artifactId>
 	<version>0.0.1</version>
-	<name>hefesto-spring-api</name>
-	<description>hefesto-spring-api (REST E JWT)</description>
-
+	<name>hefesto-spring-base</name>
+	<description>hefesto-spring-base</description>
+	
 	<properties>
 		<java.version>14</java.version>
 		<springfox-swagger2.version>2.9.2</springfox-swagger2.version>
 	</properties>
+	
 
 	<dependencies>
 		<dependency>
@@ -30,22 +31,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		
-		<dependency>
-			<groupId>br.com.hfs</groupId>
-			<artifactId>hefesto-spring-base</artifactId>
-			<version>0.0.1</version>
-			<type>jar</type>
 		</dependency>
 
 		<dependency>
@@ -66,11 +52,6 @@
 		    <artifactId>commons-lang3</artifactId>
 		</dependency>		
 		
-		<dependency>
-		    <groupId>de.codecentric</groupId>
-		    <artifactId>spring-boot-admin-starter-client</artifactId>
-		    <version>2.1.6</version>
-		</dependency>
 		<dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
@@ -160,14 +141,5 @@
 		</dependency>
 		
 	</dependencies>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-
+	
 </project>
