--- a/hefesto-spring/src/main/resources/application.properties
+++ b/hefesto-spring/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port = 8084
+
 #spring.datasource.url=jdbc:mysql://localhost:3306/dbhefesto
 #spring.datasource.username=
 #spring.datasource.password =
@@ -26,4 +28,8 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.messages.basename=messages
+
+# jwt
+hefesto.jwt.secret=rm'!@N=Ke!~p8VTA2ZRK~nMDQX5Uvm!m'D&]{@Vr?G;2?XhbC:Qa#9#eMLN\\}x3?JR3.2zr~v)gYF^8\\:8>:XfB:Ww75N/emt9Yj[bQMNCWwW\\J?N,nvH.<2\\.r~w]*e~vgak)X"v8H`MH/7"2E`,^k@n<vE-wD3g9JWPy;CrY*.Kd2_D])=><D?YhBaSua5hW%{2]_FVXzb9`8FH^b[X3jzVER&:jw2<=c38=>L/zBq`}C6tT*cCSVC^c]-L}&/
+hefesto.jwt.expiration=86400000
 
