Added all classes of report generation logic.

--- a/hefesto-j2ee8-base/pom.xml
+++ b/hefesto-j2ee8-base/pom.xml
@@ -17,6 +17,9 @@
         <log4j-core.version>2.13.3</log4j-core.version>
         <jasperreports.version>6.13.0</jasperreports.version>
         <picketlink.version>2.7.1.Final</picketlink.version>
+        
+        <poi-ooxml.version>4.1.2</poi-ooxml.version>
+		<pdfbox.version>2.0.20</pdfbox.version>
     </properties>
     <dependencies>
         <dependency>
@@ -74,6 +77,37 @@
 		    <version>0.11</version>
 		</dependency>
 		
+		<!-- #################### APACHE #################### -->
+		
+ 		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>${poi-ooxml.version}</version>
+		</dependency>
+
+		<dependency>
+		    <groupId>org.apache.pdfbox</groupId>
+		    <artifactId>pdfbox</artifactId>
+		    <version>${pdfbox.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox-tools</artifactId>
+			<version>${pdfbox.version}</version>
+		</dependency>
+	
+		<dependency>
+		    <groupId>org.apache.pdfbox</groupId>
+		    <artifactId>xmpbox</artifactId>
+		    <version>${pdfbox.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.4</version>
+		</dependency>
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-lang3</artifactId>
