--- a/hefesto-j2ee8/src/main/webapp/WEB-INF/web.xml
+++ b/hefesto-j2ee8/src/main/webapp/WEB-INF/web.xml
@@ -4,23 +4,102 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
 
+	<display-name>Imovel - Gestão de Imóveis</display-name>
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
+	<context-param>
+		<param-name>primefaces.SUBMIT</param-name>
+		<param-value>partial</param-value>
+	</context-param>
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>nova-light</param-value>
+	</context-param>
+	<context-param>
+		<param-name>LOCALE</param-name>
+		<param-value>pt_BR</param-value>
+	</context-param>
+	<context-param>
+		<param-name>javax.faces.STATE_SAVING_METHOD</param-name>
+		<param-value>server</param-value>
+	</context-param>
+	<context-param>
+		<param-name>com.sun.faces.writeStateAtFormEnd</param-name>
+		<param-value>false</param-value>
+	</context-param>
+	<context-param>
+		<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+		<param-value>true</param-value>
+	</context-param>
+	<context-param>
+		<param-name>org.primefaces.extensions.DELIVER_UNCOMPRESSED_RESOURCES</param-name>
+		<param-value>false</param-value>
+	</context-param>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>login.xhtml</welcome-file>
+	</welcome-file-list>
+	<filter>
+		<filter-name>AuthenticationFilter</filter-name>
+		<filter-class>br.com.hfs.util.filter.AuthenticationFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>AuthenticationFilter</filter-name>
+		<url-pattern>/private/*</url-pattern>
+		<url-pattern>/help.xhtml</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>NavegationFilter</filter-name>
+		<filter-class>br.com.hfs.util.filter.NavegationFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>NavegationFilter</filter-name>
+		<url-pattern>/private/*</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>Character Encoding Filter</filter-name>
+		<filter-class>br.com.hfs.util.filter.CharacterEncodingFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>Character Encoding Filter</filter-name>
+		<servlet-name>Faces Servlet</servlet-name>
+	</filter-mapping>
+	<filter>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>PrimeFaces FileUpload Filter</filter-name>
+		<servlet-name>Faces Servlet</servlet-name>
+	</filter-mapping>
+	<context-param>
+		<param-name>javax.faces.DEFAULT_SUFFIX</param-name>
+		<param-value>.xhtml</param-value>
+	</context-param>
 	<servlet>
 		<servlet-name>Faces Servlet</servlet-name>
 		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
-
-	<context-param>
-		<param-name>primefaces.THEME</param-name>
-		<param-value>nova-light</param-value>
-	</context-param>
-	
 	<servlet-mapping>
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
-
-	<welcome-file-list>
-		<welcome-file>index.xhtml</welcome-file>
-	</welcome-file-list>
+	<mime-mapping>
+		<extension>pdf</extension>
+		<mime-type>application/pdf</mime-type>
+	</mime-mapping>
+	<error-page>
+		<exception-type>javax.faces.application.ViewExpiredException</exception-type>
+		<location>/sessionExpired.xhtml?nocid=true</location>
+	</error-page>
+	<error-page>
+		<exception-type>org.jboss.weld.context.NonexistentConversationException</exception-type>
+		<location>/sessionExpired.xhtml?nocid=true</location>
+	</error-page>
+	<error-page>
+		<location>/error.xhtml?nocid=true</location>
+	</error-page>
 </web-app>
