--- a/hefesto-j2ee8/src/main/webapp/WEB-INF/web.xml
+++ b/hefesto-j2ee8/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
 	</context-param>
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>nova-light</param-value>
+		<param-value>bootstrap</param-value>
 	</context-param>
 	<context-param>
 		<param-name>LOCALE</param-name>
