--- a/hefesto-spring-api/pom.xml
+++ b/hefesto-spring-api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.1.RELEASE</version>
+		<version>2.4.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>br.com.hfs</groupId>
@@ -15,7 +15,7 @@
 	<description>hefesto-spring-api (REST E JWT)</description>
 
 	<properties>
-		<java.version>14</java.version>
+		<java.version>16</java.version>
 		<springfox-swagger2.version>2.9.2</springfox-swagger2.version>
 	</properties>
 
