--- a/hefesto-spring/src/main/resources/application.properties
+++ b/hefesto-spring/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port = 8080
 
+spring.mvc.locale=US
+
 #spring.resources.static-locations=classpath:/resources/static
 
 #spring.datasource.url=jdbc:mysql://localhost:3306/dbhefesto
