--- a/hefesto-spring/src/main/resources/application.properties
+++ b/hefesto-spring/src/main/resources/application.properties
@@ -22,8 +22,14 @@ spring.datasource.url=jdbc:h2:mem:dbhefesto
 spring.datasource.username=sa
 spring.datasource.password=
 
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/dbhefesto
+#spring.datasource.username=postgres
+#spring.datasource.password=abcd1234
+
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.show_sql=true
