--- a/hefesto-spring-api/src/main/resources/application.properties
+++ b/hefesto-spring-api/src/main/resources/application.properties
@@ -27,9 +27,9 @@ spring.datasource.password=abcd1234
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL94Dialect
 #spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
 # h2
 #spring.h2.console.enabled=true
