--- a/hefesto-spring-base/pom.xml
+++ b/hefesto-spring-base/pom.xml
@@ -88,6 +88,11 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>commons-validator</groupId>
+		    <artifactId>commons-validator</artifactId>
+		    <version>1.7</version>
+		</dependency>		
+		<dependency>
 		    <groupId>commons-fileupload</groupId>
 		    <artifactId>commons-fileupload</artifactId>
 		    <version>1.4</version>
@@ -109,6 +114,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>		
+		
+		<dependency>
+		    <groupId>org.modelmapper</groupId>
+		    <artifactId>modelmapper</artifactId>
+		    <version>2.4.4</version>
+		</dependency>
 		
 		<dependency>
 		    <groupId>io.springfox</groupId>
